# JustInCase

./: .dockerignore  .gitignore  AGENTS.md  ANTIGRAVITY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.cpp  Dockerfile.ollama  Dockerfile.prebuilt  Dockerfile.tika  LICENSE  README-docker.md  README.md  SECURITY.md  TODO.md  about.html  architecture.md  build-cache.sh  build-cpp.sh  build-llama-cpp.sh  bypass-ollama-check.sh  cache-tika.sh  chat.js  check-models.sh  check-ollama-models.sh  check-prebuilt.sh  code.js  config.py  copy-local-models.sh  copy-models-locally.sh  docker-compose-local.yml  docker-compose.override.yml  docker-compose.yml  download-models-local.sh  download-models.sh  fast-build.sh  fetch-models.sh  fetch-source-data.sh  (+30 more)
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  style-canon-lint.yml
build-notes/: 20260309-code-overhaul.md
data/: index.faiss  index.pkl  metadata.jsonl
docs/: 1000-index.md  1100-questions.md  1200-persona.md  1300-categorization.md  1400-sources.md  1500-hardware.md  1600-architecture.md  MODEL_CONFIGURATION.md  architecture.md  categorization.md  hardware.md  index.md  persona.md  questions.md  sources.md  technology.md
helper-scripts/: fetch-models.sh  fetch-source-data.sh  macos-docker-optimize.sh  prepare-gguf-models.sh  test-config.sh  test-server.sh
public/: app.js  chat.js  code.js  index.html  style.css
public/assets/fonts/: LICENSE.txt
public/sources/: README.md
public/sources/100_Survival/: README.md
public/sources/200_Medical/: README.md
public/sources/300_Food/: README.md
public/sources/400_Engineering/: README.md
public/sources/500_Comms/: README.md
public/sources/600_Education/: README.md
public/sources/700_Social/: README.md
public/sources/800_Software/: README.MD
scripts/: lint-canon.mjs
security-review/: EXECUTIVE_SUMMARY.md  FINDINGS_SUMMARY.md  README.md  REMEDIATION_ACTION_ITEMS.md  SECURITY_CHECKLIST.md  SECURITY_REVIEW_REPORT.md  nginx-secure.conf
src/: catalog.h  config.h  embeddings.h  ingestion.cpp  llm.h  pdf_utils.h  pg_vector_store.h  server.cpp  simple_vector_index.h  sqlite_vec_index.h  text_utils.h  types.h
tests/unit/: Makefile  test_text_utils  test_text_utils.cpp
